Implement thread safety and async flushing